--- a/donation_app/templates/base.html
+++ b/donation_app/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,9 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="../static/img/favicon.jpg">
-     
-      <!-- <img src="{% static 'img/favicon.jpg' %}" alt="" class="section-image"> -->
+    <link rel="icon" href="{% static 'img/favicon.jpg' %}">
+    
     <style>
         :root {
             --primary-color: #ff7000;
