--- a/donation_app/templates/donate.html
+++ b/donation_app/templates/donate.html
@@ -280,7 +280,7 @@
         <p class="text-center fs-5 mb-5">The Blessed Act of Giving, The Joyous Shower of Blessings</p>
         
         <div class="temple-status mb-5">
-            <p class="mb-0"><strong>Temple Construction Donation Status:</strong> Feb 2025: Tiles committed till date 1,92,823 out of 2,25,000 tiles required for the temple construction. Contact: 9289784775</p>
+            <p class="mb-0"><strong>Temple Construction Donation Status:</strong> Feb 2026: Tiles committed till date 1,92,823 out of 2,25,000 tiles required for the temple construction. Contact: 7811904445</p>
         </div>
         
         <!-- Food For Life Section -->
@@ -464,9 +464,9 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Contact Info</h5>
-                    <p><strong>Address:</strong><br>Plot No.-4, Sub-City Level, Sector-13, Delhi-110075</p>
-                    <p><strong>Email:</strong><br>info@donation.org</p>
-                    <p><strong>Phone:</strong><br>+91 8527405353</p>
+                    <p><strong>Address:</strong><br>B9-63,near experimental school,kalyani,west bengal</p>
+                    <p><strong>Email:</strong><br>iskconkalyani@gmail.com</p>
+                    <p><strong>Phone:</strong><br>+91 7811904445</p>
                 </div>
             </div>
             <div class="row mt-3">
