--- a/donation_app/templates/base.html
+++ b/donation_app/templates/base.html
@@ -226,14 +226,14 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Contact Info</h5>
-                    <p><strong>Address:</strong><br>Plot No.-4, Sub-City Level, Sector-13, Delhi-110075</p>
-                    <p><strong>Email:</strong><br>info@donation.org</p>
-                    <p><strong>Phone:</strong><br>+91 8527405353</p>
+                    <p><strong>Address:</strong><br>B9-63,near experimental school,kalyani,west bengal</p>
+                    <p><strong>Email:</strong><br>iskconkalyani@gmail.com</p>
+                    <p><strong>Phone:</strong><br>+91 7811904445</p>
                 </div>
             </div>
             <div class="row mt-3">
                 <div class="col-12 text-center">
-                    <p>Copyright © 2023 All Rights Reserved.</p>
+                    <p>Copyright © 2025 All Rights Reserved.</p>
                 </div>
             </div>
         </div>
